fixed bug with topnav overlaping

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -66,6 +66,7 @@ button:not(:disabled) {
     min-height: 50px;
     position: fixed;
     width: 100%;
+    z-index: 10;
 }
 
 .topnav a {
